--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -7,15 +7,18 @@
 </p>
 {% endif %}
 <div class="progress" data-toggle="tooltip" data-html="true" data-placement="bottom"
-    title="{% translate 'POINTS' %}: &lt;span class='text-nowrap'&gt;{{ formatted_points }} / {{ max }}&lt;/span&gt;{% if required %} {% translate 'POINTS_TO_PASS' %}: &lt;span class='text-nowrap'&gt;{{ required }}&lt;/span&gt {% endif %}{% if personalized_points_module_goal %} {% translate 'PERSONALIZED_POINTS_GOAL' %}: &lt;span class='text-nowrap'&gt;{{ formatted_points }} / {{ personalized_points_module_goal_points|floatformat:"0" }}&lt;/span&gt;{% endif %}">
+    title="{% translate 'POINTS' %}: &lt;span class='text-nowrap'&gt;{{ formatted_points }} / {{ max }}&lt;/span&gt;
+        {% if required %} &lt;br&gt; {% translate 'POINTS_TO_PASS' %}: &lt;span class='text-nowrap'&gt;{{ required }}&lt;/span&gt; {% endif %}
+        {% if personalized_points_module_goal %} &lt;br&gt;{% translate 'PERSONALIZED_POINTS_GOAL' %}: &lt;span class='text-nowrap'&gt;{{ personalized_points_module_goal_points|floatformat:"0" }}&lt;/span&gt;{% endif %}"
+>
     <div class="progress-bar progress-bar-striped progress-bar-{% if full_score %}success{% elif percentage >= personalized_points_module_goal %}primary{% elif passed %}warning{% else %}danger{% endif %}"
         rel="progressbar" aria-valuenow="{{ points }}" aria-valuemin="0" aria-valuemax="{{ max }}"
         style="width:{{ percentage }}%;"></div>
+    <link rel="stylesheet" href="{% static 'exercise/css/goal_points.css' %}" />
     {% if required_percentage %}
     <div class="required-points" style="left:{{ required_percentage }}%"></div>
     {% endif %}
     {% if personalized_points_module_goal %}
-    <link rel="stylesheet" href="{% static 'exercise/css/goal_points.css' %}" />
     <div class="goal-points" style="left:{{ personalized_points_module_goal|floatformat:0 }}%"></div>
     {% endif %}
 </div>
