--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -104,13 +104,14 @@
 			{% endif %}
 		</p>
 		
-    		{% with module_id=module.id student_id=user.id  %}
-			{% get_goal module_id student_id as goal %}
+		{% with module_id=module.id student_id=user.id  %}
+		{% get_goal module_id student_id as goal %}
 		<div style="width: 100%;">
 			<button type="button" class="aplus-button--secondary aplus-button--xs" style="float: right;" data-toggle="modal" data-target="#pointsGoalModal" data-module-id="{{ module.id }}">
 				<span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span> Points goal
 			</button>
 			{% points_progress module %}
+		</div>
 		{% endwith %}
 
 		{{ module.introduction|safe }}
@@ -288,10 +289,9 @@
 <script>
 	document.addEventListener('DOMContentLoaded', function() {
 		$('#pointsGoalModal').on('show.bs.modal', function (event) {
-			var button = $(event.relatedTarget); // Button that triggered the modal
-			var moduleId = button.data('module-id'); // Extract info from data-* attributes
+			var button = $(event.relatedTarget);
+			var moduleId = button.data('module-id');
 	
-			// Use the moduleId as needed, for example, set it in a hidden input field in the modal
 			var modal = $(this);
 			modal.find('.modal-body input#module').val(moduleId);
 		});
