--- a/exercise/templates/exercise/points_goal_modal.html
+++ b/exercise/templates/exercise/points_goal_modal.html
@@ -4,22 +4,26 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="pointsGoalModalLabel">Set points goal for module {{module.name}}</h4>
+                <h4 class="modal-title" id="pointsGoalModalLabel">Set points goal for module {{module}}</h4>
             </div>
             <div class="modal-body">
                 <form method="post" action="{% url 'save_points_goal' %}">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="points-goal" class="control-label">Points Goal:</label>
-                        <input type="text" class="form-control" id="points-goal" name="points_goal" placeholder="Enter points or percentage (e.g., 50 or 50%)">
+                        <label for="points-goal" class="control-label">Enter points goal as percentage or points (eg. 50% or 150)</label>
+                        <div style="display: flex;">
+                            <input type="text" style="width: 100px;" class="form-control" id="points-goal" name="points_goal">
+                            <span style="margin-top: 5px;">/<text id="max-points">{{ max_points }}</text></span>
+                        </div>
+                        Required points: <text id="required-points">{{ required_points }}</text>
                     </div>
-                    <!-- Hidden fields to automatically send more information -->
                     <input type="hidden" name="student" value="{{ user.id }}">
                     <input type="hidden" id="module" name="module-id" value="">
+                    <input type="hidden" id="max_points" name="max_points" value="">
                     
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="aplus-button--secondary aplus-button--md" data-dismiss="modal">Close</button>
+                        <button type="submit" class="aplus-button--default aplus-button--md">Save changes</button>
                     </div>
                 </form>
             </div>
