Change points goal saving and modal

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -234,8 +234,8 @@ file for all the components */
 }
 .progress .required-points {
     position: absolute;
-    height: 20px;
-    border-left: 1px solid black;
+    height: 100%;
+    border-left: 2px solid black;
 }
 .glyphicon.red {
   color: #ff7070;
