--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% load course %}
 {% load exercise %}
-{% include 'exercise/points_goal_modal.html' %}
 <script src="{% static 'exercise/user_results.js' %}"></script>
 
 {% if categories|len_listed > 1 %}
@@ -104,15 +103,18 @@
 			{% endif %}
 		</p>
 		
-		{% with module_id=module.id student_id=user.id  %}
-		{% get_goal module_id student_id as goal %}
-		<div style="width: 100%;">
-			<button type="button" class="aplus-button--secondary aplus-button--xs" style="float: right;" data-toggle="modal" data-target="#pointsGoalModal" data-module-id="{{ module.id }}">
-				<span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span> Points goal
-			</button>
+		<div id="progress-{{module.url|lower}}" style="width: 100%;">
+			{% csrf_token %}
+			{% if user.id %}
+				{% get_max_module_points module.id user.id as max_points %}
+				{% if max_points > 0 and user.id %}
+					<a class="page-modal aplus-button--secondary aplus-button--xs" style="float: right; margin-left: 5px;" role="button" href="{% url 'save_points_goal_form_view' course_slug=course.url instance_slug=instance.url module_slug=module.url %}" data-module-id="{{ module.id }}" title="{% translate 'POINTS_GOAL_TOOLTIP' %}" data-toggle="tooltip">
+						<span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span> {% translate 'POINTS_GOAL' %}
+					</a>
+				{% endif %}
+			{% endif %}
 			{% points_progress module %}
 		</div>
-		{% endwith %}
 
 		{{ module.introduction|safe }}
 		{% if student %}
@@ -285,15 +287,3 @@
 		startListen("{{course|safe}}");
 	}, false);
 </script>
-
-<script>
-	document.addEventListener('DOMContentLoaded', function() {
-		$('#pointsGoalModal').on('show.bs.modal', function (event) {
-			var button = $(event.relatedTarget);
-			var moduleId = button.data('module-id');
-	
-			var modal = $(this);
-			modal.find('.modal-body input#module').val(moduleId);
-		});
-	});
-	</script>
