Change goal points indicator to black

--- a/exercise/static/exercise/css/goal_points.css
+++ b/exercise/static/exercise/css/goal_points.css
@@ -2,5 +2,5 @@
     position: absolute;
     height: 100%;
     width: 3px;
-    background: repeating-linear-gradient(#005EB8, #005EB8 2px, transparent 2px, transparent 4px);
+    background: repeating-linear-gradient(#000000, #000000 2px, transparent 2px, transparent 4px);
 }
