Fix invisible progress bars
Fixes #1390

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -71,6 +71,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/news';
 @import 'components/overlay';
 @import 'components/pagination';
+@import 'components/progress-bar';
 @import 'components/resize';
 @import 'components/ajax-search-select';
 @import 'components/sidebar';
