--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -48,7 +48,7 @@
         {% translate "CLONE_INTO_NEW_INSTANCE" %}
     </button>
     <div class="hidden progress">
-      <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%;">
+      <div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;">
         {% translate "CLONING_COURSE" %}
       </div>
     </div>
