--- a/edit_course/templates/edit_course/edit_model.html
+++ b/edit_course/templates/edit_course/edit_model.html
@@ -45,7 +45,7 @@
                 </a>
             </p>
             <div id="metadata-progress" class="progress hide">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%;"></div>
+                <div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width: 100%;"></div>
             </div>
         </div>
     </fieldset>
