--- a/exercise/templates/exercise/staff/_assessment_panel.html
+++ b/exercise/templates/exercise/staff/_assessment_panel.html
@@ -156,7 +156,7 @@
 						{% if file.exists %}
 							{% if not file.is_passed %}
 							<div class="submitted-file-progress">
-								<div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
+								<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%">
 									{% translate "LOADING" %}
 								</div>
 							</div>
