--- a/edit_course/templates/edit_course/edit_gitmanager.html
+++ b/edit_course/templates/edit_course/edit_gitmanager.html
@@ -25,7 +25,7 @@
         {% translate "SUBMIT" %}
     </button>
     <div class="hidden progress">
-      <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%;">
+      <div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;">
         {% translate "UPDATING_GITMANAGER" %}
       </div>
     </div>
