--- a/templates/base.html
+++ b/templates/base.html
@@ -270,7 +270,7 @@
 						{% translate "EXERCISE_ERROR_COMMUNICATION" %}
 					</div>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%"
+						<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%"
 							data-msg-error="{% translate 'LOADING_FAILED' %}">
 							{% translate "LOADING" %}
 						</div>
@@ -290,7 +290,7 @@
 			<div class="modal-content">
 				<div class="modal-progress">
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%"
+						<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%"
 							data-msg-error="{% translate 'LOADING_FAILED' %}">
 							{% translate "LOADING" %}
 						</div>
