Fix LTI tool issues
Added a confirmation dialog for importing the contents
of a whole course via LTI in order to reduce the likelyhood
of accidentally importing a whole course's worth of content.

Also updated LTI module related views with correct classes
when rewriting exercise links with lti-exercise URLs, since
currently in production the isinstance calls don't match
the module exercises.

--- a/lti_tool/templates/lti_tool/course_list.html
+++ b/lti_tool/templates/lti_tool/course_list.html
@@ -31,8 +31,8 @@
 							<form style="display: inline-block" method="POST" action="{{ instance_url }}">
 								{% csrf_token %}
 								<button
-									class="aplus-button--secondary aplus-button--xs"
-									type="submit"
+									class="use-whole-course-button aplus-button--secondary aplus-button--xs"
+									type="button"
 								>
 									{% translate "LTI_USE_WHOLE_COURSE" %}
 								</button>
@@ -52,4 +52,13 @@
 		{% endfor %}
 	</div>
 </section>
+<script>
+	$(document).ready(function() {
+		$(".use-whole-course-button").on("click", function() {
+			if (confirm("{% translate 'LTI_CONFIRM_USE_WHOLE_COURSE' %}")) {
+				$(this).closest("form").submit();
+			}
+		});
+	})
+</script>
 {% endblock %}
