Fixes for personalized points goal

--- a/exercise/templates/exercise/personalized_points_goal_modal.html
+++ b/exercise/templates/exercise/personalized_points_goal_modal.html
@@ -50,11 +50,12 @@
 				{% endif %}
 			</div>
 			<div style="display: flex;">
-				<button type="submit" class="aplus-button--default aplus-button--md" style="margin-top: 10px;">{% translate "SAVE" %}</button>
+				<input type="hidden" name="method" value="post">
+				<button type="submit" class="aplus-button--default aplus-button--md" style="margin-top: 10px; value="Post;">{% translate "SAVE" %}</button>
 		</form>
 				{% if points_goal != False %}
-					<form id="deletePointsGoalForm" method="POST"
-					action="{% url 'save_points_goal_form_view' course_slug=course.url instance_slug=instance.url module_slug=module.url %}"
+					<form id="deletePointsGoalForm" method="DELETE"
+					action="{% url 'delete_points_goal_form_view' course_slug=course.url instance_slug=instance.url module_slug=module.url %}"
 					data-module-url="{{module.url|lower}}"
 					data-personalized-points-goal-text="{% translate 'PERSONALIZED_POINTS_GOAL ' %}"
 					data-personalized-points-goal-tooltip-text="{% translate 'POINTS_GOAL' %}"
@@ -62,7 +63,8 @@
 					data-points-goal={{ points_goal }}
 					>
 						{% csrf_token %}
-						<button type="submit" class="aplus-button--danger aplus-button--md" style="margin-top: 10px; margin-left: 5px;">{% translate "REMOVE" %}</button>
+						<input type="hidden" name="method" value="delete">
+						<button type="submit" class="aplus-button--danger aplus-button--md" style="margin-top: 10px; margin-left: 5px;" value="Delete;">{% translate "REMOVE" %}</button>
 					</form>
 				{% endif %}
 			</div>
