--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -7,9 +7,20 @@
 </p>
 {% endif %}
 <div class="progress" data-toggle="tooltip" data-html="true" data-placement="bottom"
-    title="{% translate 'POINTS' %}: &lt;span class='text-nowrap'&gt;{{ formatted_points }} / {{ max }}&lt;/span&gt;
-        {% if required %} &lt;br&gt; {% translate 'POINTS_TO_PASS' %}: &lt;span class='text-nowrap'&gt;{{ required }}&lt;/span&gt; {% endif %}
-        {% if personalized_points_module_goal %} &lt;span class='personalized-points-full-text text-nowrap'&gt; &lt;br&gt;{% translate 'PERSONALIZED_POINTS_GOAL' %}: &lt;span class='personalized-points-text text-nowrap'&gt;{{ personalized_points_module_goal_points|floatformat:"0" }}&lt;/span&gt;&lt;/span&gt;{% endif %}"
+    title="{% translate 'POINTS' %}: <span class='text-nowrap'>{{ formatted_points }} / {{ max }}</span>
+    {% if required %}
+        <br/>
+        {% translate 'POINTS_TO_PASS' %}: <span class='text-nowrap'>{{ required }}</span>
+    {% endif %}
+    {% if personalized_points_module_goal %}
+        <span class='personalized-points-full-text text-nowrap'>
+            <br/>
+            {% translate 'PERSONALIZED_POINTS_GOAL' %}:
+            <span class='personalized-points-text text-nowrap'>
+                {{ personalized_points_module_goal_points|floatformat:"0" }}
+            </span>
+        </span>
+    {% endif %}"
 >
     <div class="progress-bar progress-bar-striped progress-bar-{% if full_score %}success{% elif percentage >= personalized_points_module_goal %}primary{% elif passed %}warning{% else %}danger{% endif %}"
         rel="progressbar" aria-valuenow="{{ points }}" aria-valuemin="0" aria-valuemax="{{ max }}"
