Personalized points goal (#1387)
Add option for users to set personalized points goals for modules
---------

Co-authored-by: murhum1 <markus.murhu@aalto.fi>

--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 {% if not feedback_revealed %}
 <p class="small">
 	<i class="glyphicon glyphicon-info-sign"></i>
@@ -6,11 +7,29 @@
 </p>
 {% endif %}
 <div class="progress" data-toggle="tooltip" data-html="true" data-placement="bottom"
-    title="{% translate 'POINTS' %}: &lt;span class='text-nowrap'&gt;{{ formatted_points }} / {{ max }}&lt;/span&gt;{% if required %} {% translate 'POINTS_TO_PASS' %}: &lt;span class='text-nowrap'&gt;{{ required }}&lt;/span&gt;{% endif %}">
-    <div class="aplus-progress-bar aplus-progress-bar-striped aplus-progress-bar-{% if full_score %}success{% elif passed %}warning{% else %}danger{% endif %}"
+    title="{% translate 'POINTS' %}: <span class='text-nowrap'>{{ formatted_points }} / {{ max }}</span>
+    {% if required %}
+        <br/>
+        {% translate 'POINTS_TO_PASS' %}: <span class='text-nowrap'>{{ required }}</span>
+    {% endif %}
+    {% if module_goal %}
+        <span class='personalized-points-full-text text-nowrap'>
+            <br/>
+            {% translate 'PERSONALIZED_POINTS_GOAL' %}:
+            <span class='personalized-points-text text-nowrap'>
+                {{ module_goal_points|floatformat:"0" }}
+            </span>
+        </span>
+    {% endif %}"
+>
+    <div class="aplus-progress-bar aplus-progress-bar-striped aplus-progress-bar-{% if full_score %}success{% elif module_goal_achieved %}primary{% elif passed %}warning{% else %}danger{% endif %}"
         rel="progressbar" aria-valuenow="{{ points }}" aria-valuemin="0" aria-valuemax="{{ max }}"
         style="width:{{ percentage }}%;"></div>
+    <link rel="stylesheet" href="{% static 'exercise/css/goal_points.css' %}" />
     {% if required_percentage %}
     <div class="required-points" style="left:{{ required_percentage }}%"></div>
+    {% endif %}
+    {% if module_goal_percentage %}
+    <div id="goal-points" class="goal-points" style="left:{{ module_goal_percentage|floatformat:0 }}%"></div>
     {% endif %}
 </div>
