Add further fixes & streamlining for module goals
Removed related templatetags, instead getting required
values in the related view. Fixed userprofile vs. user
query related issues.

--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -12,7 +12,7 @@
         <br/>
         {% translate 'POINTS_TO_PASS' %}: <span class='text-nowrap'>{{ required }}</span>
     {% endif %}
-    {% if module_goal %}
+    {% if module_goal_points %}
         <span class='personalized-points-full-text text-nowrap'>
             <br/>
             {% translate 'PERSONALIZED_POINTS_GOAL' %}:
