--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -106,8 +106,7 @@
 		<div id="progress-{{module.url|lower}}" style="width: 100%;">
 			{% csrf_token %}
 			{% if user.id %}
-				{% get_max_module_points module.id user.id as max_points %}
-				{% if max_points > 0 and user.id %}
+				{% if module.max_points > 0 and user.id %}
 					<a class="page-modal aplus-button--secondary aplus-button--xs" style="float: right; margin-left: 5px;" role="button" href="{% url 'save_points_goal_form_view' course_slug=course.url instance_slug=instance.url module_slug=module.url %}" data-module-id="{{ module.id }}" title="{% translate 'POINTS_GOAL_TOOLTIP' %}" data-toggle="tooltip">
 						<span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span> {% translate 'POINTS_GOAL' %}
 					</a>
