--- a/deviations/templates/deviations/override_dl.html
+++ b/deviations/templates/deviations/override_dl.html
@@ -142,10 +142,20 @@
 			</table>
 		</div>
 		<div class="form-group">
+			<input type="hidden" id="timezone_string" name="timezone_string" value="">
+		</div>
+		<div class="form-group">
 			<div class="col-sm-10">
 				<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
 			</div>
 		</div>
 	</form>
 </div>
+
+<script>
+	// Get the user's timezone
+	const timezoneString = Intl.DateTimeFormat().resolvedOptions().timeZone;
+	// Set the hidden input field value to the timezone string
+	document.getElementById('timezone_string').value = timezoneString;
+</script>
 {% endblock %}
