--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -232,6 +232,12 @@
 		{% translate "SUBMISSION_DEVIATIONS" %}
 	</a>
 </li>
+<li class="menu-all-submissions">
+	<a href="{{ instance|url:'all-submissions' }}">
+		<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+		{% translate "ALL_SUBMISSIONS" %}
+	</a>
+</li>
 
 {% endif %}
 
