Allow user to skip submitters when using manual assessment
Bugs in the NextUnassessedSubmitterView were previously fixed in PR #1413.
However, the previous fixes removed the possibility to skip submitters.
These changes re-implement skipping, but this time a bit differently.

Fixes #1439

--- a/course/templates/course/staff/all_submissions_table.html
+++ b/course/templates/course/staff/all_submissions_table.html
@@ -19,7 +19,7 @@
 		<p>
 			{% if count <= default_limit and not limited %}
 			{% blocktranslate trimmed with count=count url=all_url %}
-				NUM_OF_SUBMISSIONS_DISPLAYED -- {{ count }}, {{ url }}
+				NUM_OF_SUBMISSIONS_DISPLAYED -- {{ count }}
 			{% endblocktranslate %}
 			{% elif limited %}
 			{% blocktranslate trimmed with limit=default_limit url=all_url %}
