--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -238,8 +238,8 @@
 		{% translate "SUBMISSION_DEVIATIONS" %}
 	</a>
 </li>
-<li class="menu-all-submissions">
-	<a href="{{ instance|url:'all-submissions' }}">
+<li class="nav-item">
+	<a class="nav-link menu-all-submissions" href="{{ instance|url:'all-submissions' }}">
 		<span class="bi-list-ul" aria-hidden="true"></span>
 		{% translate "ALL_SUBMISSIONS" %}
 	</a>
