--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -28,9 +28,26 @@
 		background: transparent;
 	}
 
-	.navbar-dropdown > li.dropdown > a.dropdown-toggle {
+	.navbar-brand, .navbar-dropdown > li.dropdown > a.dropdown-toggle {
 		padding-top: $navbar-padding-vertical;
 		padding-bottom: $navbar-padding-vertical;
+		padding-left: 0.75rem;
+		padding-right: 0.75rem;
+	}
+
+	.navbar-brand {
+		margin-left: -12px;
+	}
+
+	.user-menu.navbar-nav {
+		li {
+			a {
+				padding-top: $navbar-padding-vertical;
+				padding-bottom: $navbar-padding-vertical;
+				padding-left: 0.75rem;
+				padding-right: 0.75rem;
+			}
+		}
 	}
 /*
 	a.navbar-brand:hover,
@@ -97,7 +114,7 @@
 			}
 		}
 	}
-
+*/
 	.navbar-dropdown {
 		div.dropdown-backdrop {
 			display: none;
@@ -108,23 +125,24 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 			max-width: 70vw;
+			display: block;
 		}
 
 		@media (max-width: $screen-md-max) {
-			li.dropdown > a.dropdown-toggle {
-				max-width: 65vw;
-			}
-		}
-
-		@media (max-width: $screen-sm-max) {
 			li.dropdown > a.dropdown-toggle {
 				max-width: 55vw;
 			}
 		}
 
-		@media (max-width: $screen-xs-max) {
+		@media (max-width: $screen-sm-max) {
 			li.dropdown > a.dropdown-toggle {
 				max-width: 45vw;
+			}
+		}
+
+		@media (max-width: $screen-xs-max) {
+			li.dropdown > a.dropdown-toggle {
+				max-width: 55vw;
 			}
 
 			li.open > ul.dropdown-menu {
@@ -134,7 +152,7 @@
 			}
 		}
 	}
-*/
+/*
 	ul.visible-xs {
 		margin: 0;
 
@@ -180,4 +198,5 @@
 			}
 		}
 	}
+*/
 }
