--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
 					<div style="display: flex; align-items: center">
 						<a class="navbar-brand" href="{% url 'home' %}">{% brand_name %}</a>
 						<span class="navbar-brand" style="font-size: 0.8em">{{ APLUS_VERSION }}</span>
-						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<ul class="navbar-nav navbar-dropdown me-auto">
 							<li role="presentation" class="nav-item dropdown">
 								<a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">
@@ -138,7 +138,7 @@
 						</ul>
 					</div>
 					<div class="d-none d-sm-flex">
-						<ul class="nav navbar-nav user-menu" style="flex-direction: row; align-items: baseline; gap: 1em">
+						<ul class="navbar-nav navbar-dropdown user-menu" style="flex-direction: row; align-items: baseline; gap: 1em">
 							{% if show_language_toggle %}
 							<li class="nav-item">
 								{% if request.LANGUAGE_CODE == 'fi' %}
@@ -171,7 +171,6 @@
 									<li role="presentation">
 										<a class="dropdown-item" href="{% url 'profile' %}">{% translate "PROFILE" %}</a>
 									</li>
-									<li role="separator" class="dropdown-divider"></li>
 									<li role="presentation">
 										<a class="dropdown-item" href="{% url 'logout' %}">
 											<i class="bi-box-arrow-right" aria-hidden="true"></i>
