--- a/exercise/templates/exercise/staff/_submissions_table_compact.html
+++ b/exercise/templates/exercise/staff/_submissions_table_compact.html
@@ -20,7 +20,7 @@
 			{% if forloop.counter < lowest_visible_index or forloop.counter > highest_visible_index %}
 			class="submissions-toggle hidden"
 			{% elif forloop.counter == index %}
-			class="active"
+			class="table-active"
 			{% endif %}
 		>
 			<td>
