--- a/templates/base.html
+++ b/templates/base.html
@@ -290,6 +290,7 @@
 					<ul class="nav navbar-nav">
 						{% block footercontent %}{% endblock %}
 						<li><a href="{% url 'privacy_notice' %}">{% translate "PRIVACY_NOTICE" %}</a></li>
+						<li><a href="{% url 'cookie_notice' %}">{% translate "COOKIE_NOTICE" %}</a></li>
 						<li><a href="{% url 'accessibility_statement' %}">{% translate "ACCESSIBILITY_STATEMENT" %}</a></li>
 						<li><a href="{% url 'support_channels' %}">{% translate "SUPPORT" %}</a></li>
 						<li><a href="https://link.webropol.com/s/aplus-feedback" target="_blank">{% translate "FEEDBACK" %}</a></li>
