Make progress bars animated in BS5.

--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -49,7 +49,7 @@
         {% translate "CLONE_INTO_NEW_INSTANCE" %}
     </button>
     <div class="d-none progress">
-      <div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;">
+      <div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%;">
         {% translate "CLONING_COURSE" %}
       </div>
     </div>
