--- a/exercise/templates/exercise/_exercise_wait.html
+++ b/exercise/templates/exercise/_exercise_wait.html
@@ -9,7 +9,7 @@
 	data-msg-error="{% translate 'EXERCISE_ERROR_COMMUNICATION' %}"
 	data-msg-timeout="{% translate 'EXERCISE_ERROR_GRADING_TIMEOUT' %}"
 >
-	<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;">
+	<div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%;">
 		{% translate "GRADING_SUBMISSION" %}
 	</div>
 </div>
