--- a/exercise/templates/exercise/_submit_progress.html
+++ b/exercise/templates/exercise/_submit_progress.html
@@ -2,7 +2,7 @@
 
 <div class="quiz-submit-overlay submission-overlay d-none"></div>
 <div class="quiz-submit-progress sticky-progress progress d-none">
-	<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;">
+	<div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%;">
 		{% translate "POSTING_SUBMISSION" %}
 	</div>
 </div>
