--- a/exercise/templates/exercise/staff/_assessment_panel.html
+++ b/exercise/templates/exercise/staff/_assessment_panel.html
@@ -163,7 +163,7 @@
 						{% if file.exists %}
 							{% if not file.is_passed %}
 							<div class="d-none progress submitted-file-progress">
-								<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%">
+								<div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%">
 									{% translate "LOADING" %}
 								</div>
 							</div>
