--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -51,7 +51,7 @@
 </div>
 
 <div id="submit-progress" class="d-none progress">
-	<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;">
+	<div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%;">
 		{% translate "POSTING_SUBMISSION" %}
 	</div>
 </div>
@@ -64,7 +64,7 @@
 	data-msg-load="{% translate 'LOADING_EXERCISE' %}"
 	data-msg-submit="{% translate 'POSTING_SUBMISSION' %}"
 	data-msg-error="{% translate 'EXERCISE_ERROR_COMMUNICATION' %}">
-	<div class="aplus-progress-bar aplus-progress-bar-striped active" role="progressbar" style="width:100%;"></div>
+	<div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%;"></div>
 </div>
 {% endblock %}
 
